--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="usaha2.html">
-	<title>DE'CAKE & BAKERY SHOP</title>
-
-	<h1><b><i>DE'CAKE & BAKERY SHOP</i></b></h1>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="Home.html">
+	<title>DHELAELA CAKESHOP</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- External CSS Files -->
+	<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<!-- External JS Files -->
+	<script type="text/javascript" src="./assets/js/jquery-3.2.1.slim.min.js"></script>
+	<script type="text/javascript" src="./assets/js/popper.min.js"></script>
+	<script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	</head>
 <style>
 body {margin:0;}
@@ -33,72 +43,85 @@ body {margin:0;}
   color: white;
 }
 </style>
-</head>
 <body>
 
-<div class="topnav">
-  <a class="active" href="home.html">Home</a>
-  <a href="usaha.html">Usaha</a>
-  <a href="contact.html">Contact</a>
-</div>
-
-<div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
-</div>
-
-</body>
-</html>
-
-	<p>Selamat datang di <i>website</i> saya, dalam website ini, saya memperkenalkan produk jualan saya.<u>CAKE & BAKERY</u>.</p>
-
-	<table width="50%">
-        <tr><td>Nama:</td><td><b>Tutik sri utami marwi(Ella)</b></td></tr>
-		<tr><td>Jenis Kelamin:</td><td>Perempuan</td></tr>
-		<tr><td>Tempat Lahir:</td><td>Rembang-JATENG</td></tr>
+</div>			
+		<div class="icon-bar">
+		<div class="pull-right"> 
+		<a href="https://instagram/zaki60620"><i class="fa fa-instagram"></i></a> 
+		<a href="mailto:zaki60620@gmail.com/zaki60620@gmail.com"><i class="fa fa-envelope"></i></a> 
+		<a href="https://api.whatsapp.com/send?phone=60133933660" class="whatsapp"><i class="fa fa-whatsapp"></i></a>
+		<a href="https://facebook.com/elzaki" class="facebook"><i class="fa fa-facebook"></i></a>
+  </div>
+	<div class="container-fluid">
+		<header class=" text-center">
 		
-		<tr><td valign="top">Alamat:</td><td>KIOS Puspanita<br/>aras2,jln.Puchong-Kajang<br/>Hospital Serdang<br/>43000Selangor<br/>Malaysia</td></tr>
-	</table>
-<br/><br/>
-	<table><tr>
+			<h1 style="color:blue">DHELAELA CAKESHOP</h1>
+		</header>
+		</div>
+		<br>
+
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="sweetcakes.html">Sweet Cakes</a>
+	<a href="pastry.html">Pastry</a>
+	<a href="contact.html">Contact</a>
+	<a href="testimony.html">Testimony</a>
+</div>
 
 		<td valign="top">
+<html>
 
-	<h2>CAKE & BAKERY:</h2>
-	<ul>
-		<li>Pufflova</li>
-		<li>Cheese Tart</li>
-		<li>Red velved</li>
-		<li>Moist cake</li>
-		<li>Carrot Cake</li>
-		<li>Indulgent cake</li>
-		<li>Cup Cake</li>
-		<li>Choc fuge</li>
-		<li>Snow Cheese Vanila</li>
-		<li>Sarang Lebah</li>
-		<li>Blueberry Cheese</li>
-		<li>Rainbow Cake</li>
-		<li>Fruit Tart</li>
-		<li>Blackforest</li>
-	</ul>
-		</td>
-		<td valign="top">
-		<h2>BISKUT & PASTRY:</h2>
-			<ul>
-			<li>Almond Cookies</li>
-			<li>Popia Simpul Kasih</li>
-			<li>Tart Nenas Gulung</li>
-			<li>Boulu</li>
-			<li>Kue Bakar</li>
-			<li>Medium Caramel</li>
-			<li>Brownis</li>
-			<li>Chicken Slice</li>
-			<li>Pizza Seafood</li>
-			<li>Pie Apple</li>
-			<li>Sardin Puff</li>
-			<li>Donnut</li>
-		</ul> 
-	</td>
+<body>
+<div class="col-md-6">
+	<h1>Birthday Cake</h1>
+	<img src="gambar/02.jpg" style="widht:1000px;height:400px;."/>
+	<p>Menerima tempahan,dah jual sehari-hari,diworkshop kami.yg pasti enak,halal,dan bersih...Berbagai macam bentuk mengikut selera pelanggan bisa pilih pada contoh gambar atau watasap kami dg sesuai keinginan,inshaa Allah dijamin sedap.
+	</div>
+<div class="col-md-6">
+	<h1>POKADOT</h1>
+	<img src="gambar/01.jpg" style="widht:800px;height:400px;."/>
+	</div>
+	<p>*Nama panggilan lain bagi ovelette adalah quick 75. Ia berwarna oren atau kuning dan teksturnya seperti gel.Ovalette merupakan pengemulsi atau penstabil yang digunakan untuk membuat kek span dan dan kek-kek yang menggunakan telur sebagai bahan untuk melembutkan kek.
+**sudu kecil = sudu teh
+**filling ialah inti bagi apam.
 
-</body>
+Cara-cara penyediaan apam polkadot
+
+1. Masukkan telur, gula dan ovalette ke dalam mangkuk mixer dan pukul dengan kelajuan maksima sehingga kembang dan menjadi putih.
+
+2. Selepas tue, baru campur bahan2 lain seperti masukkan susu, tepung+baking powder (yang telah diayak) dan esen vanilla dan mix lagi dengan kelajuan minimun sehingga sebati.
+
+3. Bahagikan adunan kepada beberapa bahagian,kemudian titiskan pewarna water based mengikut pilihan.
+
+4. Masukkan setiap adunan berwarna ke dalam piping bag.
+
+5. Picitkan adunan ke dalam mangkuk kertas (setengah/separuh sahaja).
+
+6. Letakkan filling secukupnya (nak senang masukkan dalam plastik kemudian picitkan).
+
+7. Picit lagi adunan sama atau warna berbeza sehingga hampir penuh.
+
+8. Last sekali dot-dot kan dengan warna pilihan,kemudian kukus dengan api kecil/sederhana selama 10-15minit atau sehingga masak.
+<div class="col-md-6">
+	<h1>wedding cake</h1>
+	<img src="gambar/04.jpg" style="widht:800px;height:400px;."/>
+	<p>Juga tersedia orderan kek wedding,dan jg doorgift.Kue pengantin pada jaman dahulu belum ditemukan sehingga belum digunakan. karena inilah orang orang jaman dahulu menggunakan pie pengantin sebagai pengganti kue pernikahan. Tradisi dan kebiasaan seperti ini berlangsung hingga sekitar awal abad ke 19. Selain iitu pada jaman Roma kuno, wedding cake pertama juga bukan benar benar terbuat dari cake, melainkan terbuat dari roti. Namun, roti ini bukannya tanpa lambang. Roti yang digunakan melambangkan kesuburan dan keberuntungan untuk pasangan. </p>
+	<p>Di saat sedang mencari kue pengantin, mungkin anda akan dipusingkan dengan berbagai macam pertimbangan seperti misalnya masalah hiasan, warna, rasa, tema kue pengantin hingga harga. Jika anda sedang mengalaminya, kini saatnya anda melupakan sejjenak mengenai hal hal tersebbut karena kami memiliki beberapa fakta unik dan menarik seputar wedding cake yang bisa membuat pemikiran anda menjadi lebih fresh.</p>
+	
+		<div class="left">
+                    <div class="col-12 col-md-4">
+						 <div class="footer-widget social-widget">
+               <h3><b>Contact:<span class="head-line"></span></b></h3>
+							<ul>
+		 <li><span><b>Email:</span>zaki60620@gmail.com</b></li>
+         <li><span><b>Phone:</span>+60 1117671556</b></li>
+         <li><span><b>Mobile:</span>WA +60 0133933660</b></li>
+                            </ul>
+							</div>	
+	
+	
+	
+	
+	</body>
 </html>
